# repo-finder

./: MEMORY.md  README.md  pyproject.toml  repo_finder.py
tests/: test_repo_finder.py
